# rosalind

./: README.md  rosalind.cabal
src/: Rosalind.hs
src/Problems/: Problem1.hs  Problem10.hs  Problem2.hs  Problem3.hs  Problem4.hs  Problem5.hs  Problem6.hs  Problem7.hs  Problem8.hs  Problem9.hs
src/Rosalind/: Codon.hs  Dna.hs  Fasta.hs  Instances.hs  Rna.hs  Utils.hs
src/Rosalind/Codon/: Types.hs
src/Rosalind/Dna/: Complement.hs  Matrix.hs  Parsers.hs  Types.hs
src/Rosalind/Fasta/: Parsers.hs  Types.hs
src/Rosalind/Rna/: Parsers.hs  Types.hs
tests/: Tests.hs
tests/data/: 1-1.in  8-1.in  8-1.out  9-1.in  9-1.out
